Criado através do Colab

--- a/atividade_3.ipynb
+++ b/atividade_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNClbkmsnqB1wS5eBtANlcE",
+      "authorship_tag": "ABX9TyPPZdogve4KfwJrvqICPcZO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
         "\n",
         "Lista de exercício: 03/n\n",
         "\n",
-        "link do colab: https://github.com/barbarajunq131/Programas/blob/501c5f845e9bf7d7ddfc7b579a1f9160339656c2/Lista_exercicio_1__Probabilidade.ipynb"
+        "link do colab: https://colab.research.google.com/drive/1PffG20SWatEMdZo7MPNTIJNbTnTTBO3b#scrollTo=QNB6QxhtSAw1"
       ],
       "metadata": {
         "id": "PQXmsPBUL6z9"
