Criado através do Colab

--- a/atividade_3.ipynb
+++ b/atividade_3.ipynb
@@ -142,7 +142,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "j5SsBRtJR4D9",
         "outputId": "9eb7cc4c-7c04-42cd-8fde-3b07a74f5e57"
@@ -284,7 +285,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "jW2sHzntSm59",
         "outputId": "dd8d6e95-f684-4471-e2e7-9a1bc3c92af5"
