Criado através do Colab

--- a/exercicio_4_desenvolvimento_regional.ipynb
+++ b/exercicio_4_desenvolvimento_regional.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPf0+QMrHX4lgnHMkft1cDy",
+      "authorship_tag": "ABX9TyO+rSm5AOMzWI3ysRtgwkzh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,9 +72,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eaef3a9f-d7e8-4ae2-c7f8-88e2da350214"
+        "outputId": "8c668d30-df48-4141-9e3d-64fa7e01d7ef"
       },
-      "execution_count": 58,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
         "uploaded = files.upload()\n",
         "arquivo = list(uploaded.keys())[0]\n",
         "df = pd.read_excel(arquivo)\n",
-        "print(f\"✅ Dados carregados: {df.shape[0]} subsetores, {df.shape[1]} colunas\")"
+        "print(f\" Dados carregados: {df.shape[0]} subsetores, {df.shape[1]} colunas\")"
       ],
       "metadata": {
         "colab": {
@@ -110,9 +110,9 @@
           "height": 89
         },
         "id": "nEAh2ecgwkXF",
-        "outputId": "4b35ff21-ac70-4120-ccdb-e805bdc21bed"
+        "outputId": "15618ae6-9657-4b9d-f298-b9031683b4a1"
       },
-      "execution_count": 59,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "display_data",
@@ -122,9 +122,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-3875d006-acf1-4d06-8937-9808da47ba01\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-4c33d942-6c2a-413b-9488-fa0a8ec60ba2\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-3875d006-acf1-4d06-8937-9808da47ba01\">\n",
+              "     <output id=\"result-4c33d942-6c2a-413b-9488-fa0a8ec60ba2\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -312,8 +312,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving dados_SP_SP.xlsx to dados_SP_SP (4).xlsx\n",
-            "✅ Dados carregados: 25 subsetores, 3 colunas\n"
+            "Saving dados_SP_SP.xlsx to dados_SP_SP (6).xlsx\n",
+            " Dados carregados: 25 subsetores, 3 colunas\n"
           ]
         }
       ]
@@ -330,9 +330,9 @@
           "height": 206
         },
         "id": "GGRoIw-eze8j",
-        "outputId": "efe1174f-eb52-4a61-fc10-c111a3d5b91b"
+        "outputId": "4682e2d1-826b-4755-930c-2b2f179fced7"
       },
-      "execution_count": 60,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f1a7d83d-046e-48fd-b52b-613a898b190f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-aa0c230c-96c5-4b1c-95ee-fee67b831b32\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -408,7 +408,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f1a7d83d-046e-48fd-b52b-613a898b190f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa0c230c-96c5-4b1c-95ee-fee67b831b32')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -460,12 +460,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-f1a7d83d-046e-48fd-b52b-613a898b190f button.colab-df-convert');\n",
+              "        document.querySelector('#df-aa0c230c-96c5-4b1c-95ee-fee67b831b32 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-f1a7d83d-046e-48fd-b52b-613a898b190f');\n",
+              "        const element = document.querySelector('#df-aa0c230c-96c5-4b1c-95ee-fee67b831b32');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -485,8 +485,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-a6c5ad7b-c237-4120-8597-421806aa89ea\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a6c5ad7b-c237-4120-8597-421806aa89ea')\"\n",
+              "    <div id=\"df-e82d60cd-0837-4734-ba5e-aab4987d2746\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e82d60cd-0837-4734-ba5e-aab4987d2746')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -605,7 +605,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-a6c5ad7b-c237-4120-8597-421806aa89ea button');\n",
+              "            document.querySelector('#df-e82d60cd-0837-4734-ba5e-aab4987d2746 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -622,7 +622,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 78
         }
       ]
     },
@@ -664,7 +664,7 @@
       "metadata": {
         "id": "ttH-OopiO9pZ"
       },
-      "execution_count": 61,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -694,9 +694,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "88Z9fOcT0fl3",
-        "outputId": "e88e842e-dbfd-422a-a4c9-b7823dbbed64"
+        "outputId": "91883639-dbba-484d-e577-94aa54bc03b8"
       },
-      "execution_count": 62,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -793,9 +793,9 @@
           "height": 606
         },
         "id": "_d3dKUVcPTjY",
-        "outputId": "60cbe79d-528e-4fee-d72d-b95391be86e6"
+        "outputId": "8cd2e3c3-e2ea-4542-90ff-d315cdafd1c3"
       },
-      "execution_count": 63,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "display_data",
@@ -856,9 +856,9 @@
           "height": 735
         },
         "id": "bk0-pqevFK_g",
-        "outputId": "0fa7cd83-92b8-42c3-bbc4-b7e6306b83df"
+        "outputId": "7b62e013-7014-4246-cafa-0a9bc51e2b6f"
       },
-      "execution_count": 64,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "display_data",
@@ -925,9 +925,9 @@
           "height": 707
         },
         "id": "lEuJD3dyFcLm",
-        "outputId": "fc8ce983-466a-475c-d75b-9caf7217a5c3"
+        "outputId": "6ec06ae3-cd5d-4e65-a653-9f7e7cc1a6e8"
       },
-      "execution_count": 67,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "display_data",
@@ -963,9 +963,9 @@
           "height": 723
         },
         "id": "nlZtgr3-Fi3K",
-        "outputId": "cdd0edcb-9f38-4794-ce44-52e7ff19d99f"
+        "outputId": "bcedd4aa-5908-4035-aec3-072234007b45"
       },
-      "execution_count": 72,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1001,7 +1001,7 @@
         "setores_fortes = df[df['QL'] > 1.5]\n",
         "top3_especializados = df_ordenado.head(3)\n",
         "\n",
-        "print(f\"\\n📊 ANÁLISE DO PERFIL ECONÔMICO:\")\n",
+        "print(f\"\\n ANÁLISE DO PERFIL ECONÔMICO:\")\n",
         "\n",
         "print(f\"\"\"\\nO município de São Paulo apresenta um Quociente Locacional médio de {ql_medio:.2f},\n",
         "indicando uma {'vantagem competitiva' if ql_medio > 1 else 'desvantagem competitiva'}\n",
@@ -1011,7 +1011,7 @@
         "apresentam especialização forte (QL > 1.5), demonstrando clusters setoriais\n",
         "bem definidos na economia local.\"\"\")\n",
         "\n",
-        "print(f\"\"\"\\n🎯 VANTAGENS COMPARATIVAS ESTRUTURAIS:\n",
+        "print(f\"\"\"\\n VANTAGENS COMPARATIVAS ESTRUTURAIS:\n",
         "\n",
         "Os setores de {top3_especializados.iloc[0]['IBGE Subsetor']} (QL={top3_especializados.iloc[0]['QL']:.2f}),\n",
         "{top3_especializados.iloc[1]['IBGE Subsetor']} (QL={top3_especializados.iloc[1]['QL']:.2f}) e\n",
@@ -1022,7 +1022,7 @@
         "comparativas que podem ser exploradas para políticas de desenvolvimento\n",
         "econômico e atração de investimentos.\"\"\")\n",
         "\n",
-        "print(f\"\"\"\\n⚖️  CONSIDERAÇÕES PARA POLÍTICAS PÚBLICAS:\n",
+        "print(f\"\"\"\\n CONSIDERAÇÕES PARA POLÍTICAS PÚBLICAS:\n",
         "\n",
         "A análise do QL revela oportunidades estratégicas para o planejamento\n",
         "econômico municipal. Os setores com especialização forte representam\n",
@@ -1037,9 +1037,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4VS1Zgbj8BO8",
-        "outputId": "44512c40-e44f-4bf1-873d-0be7392cae3b"
+        "outputId": "2e10a5ca-0fe5-4ce4-c544-8012e1f44132"
       },
-      "execution_count": 73,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1050,7 @@
             "ANÁLISE ESPECÍFICA DOS RESULTADOS\n",
             "======================================================================\n",
             "\n",
-            "📊 ANÁLISE DO PERFIL ECONÔMICO:\n",
+            " ANÁLISE DO PERFIL ECONÔMICO:\n",
             "\n",
             "O município de São Paulo apresenta um Quociente Locacional médio de 0.72, \n",
             "indicando uma desvantagem competitiva \n",
@@ -1060,7 +1060,7 @@
             "apresentam especialização forte (QL > 1.5), demonstrando clusters setoriais \n",
             "bem definidos na economia local.\n",
             "\n",
-            "🎯 VANTAGENS COMPARATIVAS ESTRUTURAIS:\n",
+            " VANTAGENS COMPARATIVAS ESTRUTURAIS:\n",
             "\n",
             "Os setores de Instituição Financeira (QL=1.82), \n",
             "Adm Técnica Profissional (QL=1.47) e \n",
@@ -1071,7 +1071,7 @@
             "comparativas que podem ser exploradas para políticas de desenvolvimento \n",
             "econômico e atração de investimentos.\n",
             "\n",
-            "⚖️  CONSIDERAÇÕES PARA POLÍTICAS PÚBLICAS:\n",
+            " CONSIDERAÇÕES PARA POLÍTICAS PÚBLICAS:\n",
             "\n",
             "A análise do QL revela oportunidades estratégicas para o planejamento \n",
             "econômico municipal. Os setores com especialização forte representam \n",
